objects/SFDC_Industry_Package_Table_Assignment__mdt.object
<CustomObject>
    <fields>
        <fullName>Description_Label__c</fullName>
        <label>Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>SFDC Industry Package Table Assignment</label>
    <pluralLabel>SFDC Industry Package Table Assignments</pluralLabel>
</CustomObject>